--- a/README.Rmd
+++ b/README.Rmd
@@ -14,42 +14,53 @@ knitr::opts_chunk$set(
 ```
 
 # yarraWQ
- 
-<!-- badges: start -->
-<!-- badges: end -->
 
-The goal of yarraWQ is to ...
+yarraWQ is an R package designed to make the Yarra River Water Quality dataset easy to use and explore. It provides clean, ready-to-analyze data, helper functions for visualization, and an interactive Shiny app for exploring trends in water parameters over time and across sites.
 
 ## Installation
 
 You can install the development version of yarraWQ from [GitHub](https://github.com/) with:
 
-``` r
+```{r}
 # install.packages("pak")
 pak::pak("ETC5523-2025/assignment-4-packages-and-shiny-apps-RuoWei-ctrl")
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+Here’s how to explore the included dataset:
 
-```{r example}
+```{r example, message=FALSE, warning=FALSE, eval=FALSE}
 library(yarraWQ)
-## basic example code
+head(yarra_wq)
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+Generate a simple time-series plot for a selected water quality parameter (for example, pH):
 
-```{r cars}
-summary(cars)
+```{r plot-example, message=FALSE, warning=FALSE, eval=FALSE}
+plot_yarra_metric(parameter_name = "pH")
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
+This function allows you to quickly visualize long-term water quality changes in the Yarra River.
 
-You can also embed plots, for example:
+## Shiny App
 
-```{r pressure, echo = FALSE}
-plot(pressure)
+For interactive exploration, you can launch the Shiny app:
+
+```{r shiny-app, message=FALSE, warning=FALSE, eval=FALSE}
+
+run_yarra_app()
 ```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+The app allows users to:
+
+-   Select a parameter and site
+
+-   View corresponding time trends
+
+-   Compare results across multiple monitoring stations
+
+## Data Source
+
+The dataset (`yarra_wq`) was adapted from your course-provided data file **yarra_wq_clean.csv**, representing long-term monitoring records of the Yarra River’s water quality.\
+Variables include pH, temperature, turbidity, dissolved oxygen, and more.
