--- a/README.Rmd
+++ b/README.Rmd
@@ -21,8 +21,7 @@ yarraWQ is an R package designed to make the Yarra River Water Quality dataset e
 
 You can install the development version of yarraWQ from [GitHub](https://github.com/) with:
 
-```{r}
-# install.packages("pak")
+```{r, eval=FALSE}
 pak::pak("ETC5523-2025/assignment-4-packages-and-shiny-apps-RuoWei-ctrl")
 ```
 
