--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,10 @@ knitr::opts_chunk$set(
 )
 ```
 
+## pkgdown Website
+
+[View the website here](https://etc5523-2025.github.io/assignment-4-packages-and-shiny-apps-RuoWei-ctrl/)
+
 ## yarraWQ
 
 yarraWQ is an R package designed to make the Yarra River Water Quality dataset easy to use and explore. It provides clean, ready-to-analyze data, helper functions for visualization, and an interactive Shiny app for exploring trends in water parameters over time and across sites.
